# ece382_final_project

./: .gdbinit  .gitignore  Cargo.toml  README.md  build.sh  openocd.cfg  run.sh
main/: Cargo.toml  build.rs
main/src/: adc14.rs  ascii.rs  buffer_stack.rs  bump.rs  byte_mut_writer.rs  clock.rs  drive_to_point.rs  lcd.rs  level1.rs  level2.rs  main.rs  math.rs  motor.rs  moving_average.rs  odometry.rs  peripherals.rs  pid.rs  ramsete.rs  rgb_led.rs  spia3.rs  sys_init.rs  tachometer.rs  timer_a1.rs  timer_a3_input_capture.rs  trajectory.rs  uart0.rs  units.rs
main/trajectories/: trajectory.json
msp432P401r_api/: Cargo.toml
msp432P401r_api/src/: adc14.rs  aes256.rs  captio0.rs  comp_e1.rs  crc32.rs  cs.rs  dio.rs  dma.rs  eusci_a2.rs  eusci_b1.rs  flctl.rs  lib.rs  pcm.rs  pmap.rs  pss.rs  ref_a.rs  rstctl.rs  rtc_c.rs  sysctl.rs  system_control_space.rs  timer32.rs  timer_a2.rs  tlv.rs  wdt_a.rs
msp432P401r_api/src/adc14/: adc14clrifgr0.rs  adc14clrifgr1.rs  adc14ctl0.rs  adc14ctl1.rs  adc14hi0.rs  adc14hi1.rs  adc14ier0.rs  adc14ier1.rs  adc14ifgr0.rs  adc14ifgr1.rs  adc14iv.rs  adc14lo0.rs  adc14lo1.rs  adc14mctl.rs  adc14mem.rs
msp432P401r_api/src/aes256/: aesactl0.rs  aesactl1.rs  aesadin.rs  aesadout.rs  aesakey.rs  aesastat.rs  aesaxdin.rs  aesaxin.rs
msp432P401r_api/src/captio0/: captiox_ctl.rs
msp432P401r_api/src/comp_e0/: cex_ctl1.rs  cex_ctl2.rs  cex_ctl3.rs
msp432P401r_api/src/comp_e1/: cex_ctl0.rs  cex_int.rs  cex_iv.rs
msp432P401r_api/src/crc32/: crc16di.rs  crc16dirb.rs  crc16inires.rs  crc16resr.rs  crc32di.rs  crc32dirb.rs  crc32inires_hi.rs  crc32inires_lo.rs  crc32resr_hi.rs  crc32resr_lo.rs
msp432P401r_api/src/cs/: csclken.rs  csclrifg.rs  csctl0.rs  csctl1.rs  csctl2.rs  csctl3.rs  csdcoercal0.rs  csdcoercal1.rs  csie.rs  csifg.rs  cskey.rs  cssetifg.rs  csstat.rs
msp432P401r_api/src/dio/: p10iv.rs  p1iv.rs  p2iv.rs  p3iv.rs  p4iv.rs  p5iv.rs  p6iv.rs  p7iv.rs  p8iv.rs  p9iv.rs  (+63 more)
trajectory_generator/: plot_coords.py  pyproject.toml  trajectory.py
(+300 files in other folders)
