[package]
name = "main"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
msp432P401r_api = { path = "../msp432P401r_api" }
cortex-m-semihosting = "0.5.0"
panic-semihosting = "0.6.0"
itoa = "1.0.11"
ryu = "1.0.18"
micromath = "2.1.0"

[build-dependencies]
quote = "1.0.37"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
