[package]
name = "msp432P401r_api"
version = "0.1.0"
edition = "2021"

[dependencies]
critical-section = { version = "1.0", optional = true }
cortex-m = "0.7.6"
cortex-m-rt = { version = "0.7.5", optional = true }
vcell = "0.1.2"

[features]
default = ["rt"]
rt = ["cortex-m-rt/device"]
critical-section = ["dep:critical-section"]